<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Energy Saver App</string>
    <string name="main_activity_name">Energy Saver Home</string>
    <string name="appliance_page_heading">Appliances</string>
    <string name="tips_page_heading">Tips</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_firstname">Firstname</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_number_of_occupants">Number of house occupants</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register_text">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_load_text">One moment, we are loading your energy saver.</string>
    <string name="login_heading">Your Energy Saver App</string>
    <string name="tips_pending_text">We are generating your tips for this device.</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="existing_account">Already have an account?</string>
    <string name="change_data_provider">Change Your Data Provider: </string>

        <!-- TODO: can remove?? -->
        <string-array name="languages">
            <item> </item>
            <item>Logout</item>
            <item>People I live with</item>

        </string-array>


</resources>