<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment" >

    <TextView
        android:id="@+id/login_heading2"
        android:layout_width="193dp"
        android:layout_height="43dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="166dp"
        android:text="@string/register_text"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="72dp"
        android:autofillHints=""
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

    <EditText
        android:id="@+id/register_password_confirm"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="72dp"
        android:autofillHints=""
        android:hint="@string/prompt_confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <EditText
        android:id="@+id/register_surname"
        android:layout_width="287dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="72dp"
        android:autofillHints=""
        android:hint="@string/prompt_surname"
        android:imeOptions="actionDone"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_firstname" />

    <EditText
        android:id="@+id/register_firstname"
        android:layout_width="287dp"
        android:layout_height="54dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="72dp"
        android:autofillHints=""
        android:hint="@string/prompt_firstname"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_confirm" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="287dp"
        android:layout_height="58dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="72dp"
        android:autofillHints=""
        android:hint="@string/prompt_email"
        android:inputType="text|textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_heading2" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="153dp"
        android:text="@string/register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_surname" />

    <TextView
        android:id="@+id/login_or3"
        android:layout_width="45dp"
        android:layout_height="42dp"
        android:layout_marginStart="183dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="183dp"
        android:gravity="center"
        android:text="or"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <Button
        android:id="@+id/register_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="161dp"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_or3" />
</androidx.constraintlayout.widget.ConstraintLayout>